<resources>
    <string name="app_name">CourtCounter</string>
    <string name="label_A">Player A</string>
    <string name="label_B">Player B</string>
    <string name="label_btn3pts">Point</string>
    <string name="label_btnACE">ACE</string>
    <string name="label_points">Points</string>
    <string name="ace_label">Aces</string>
    <string name="set_label">Sets</string>
    <string name="games_label">Games</string>
    <string name="msg_point_for_A">Point for Player A</string>
    <string name="msg_point_for_B">Point for Player B</string>
    <string name="msg_game_won_by_A">Game won by Player A</string>
    <string name="msg_game_won_by_B">Game won by Player B</string>
    <string name="msg_game_set_won_by_A">Game and set won by Player A</string>
    <string name="msg_game_set_won_by_B">Game and set won by Player B</string>
    <string name="msg_match_won_by_B">Player B has just won the Match. Congratulations!</string>
    <string name="msg_match_won_by_A">Player A has just won the Match. Congratulations!</string>
    <string name="msg_reset">Reset completed</string>
    <string name="title_end_of_match">End of Match</string>
    <string name="msg_end_of_match">Tap on the Reset Button to start a new match</string>
    <string name="msg_ace_for_A">Ace for Player A</string>
    <string name="msg_ace_for_B">Ace for Player B</string>
</resources>
