<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color100"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Layout for Team / Player A -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="@dimen/small_dimen"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:background="@color/colorBackground"
            android:elevation="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/playerNameTextViewStyle"
                android:text="@string/label_A" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/largeInfoTextViewStyle"
                android:elevation="8dp" />

            <TextView
                android:id="@+id/team_a_games"
                style="@style/smallInfoTextViewStyle" />

            <TextView
                android:id="@+id/team_a_sets"
                style="@style/smallInfoTextViewStyle" />

            <TextView
                android:id="@+id/team_a_aces"
                style="@style/smallInfoTextViewStyle" />

            <Button
                android:id="@+id/button_3ptsA"
                style="@style/LargeButtonStyle"
                android:onClick="addPointsA"
                android:text="@string/label_btn3pts" />

            <Button
                android:id="@+id/button_AceA"
                style="@style/LargeButtonStyle"
                android:onClick="add1AceA"
                android:text="@string/label_btnACE" />


        </LinearLayout>

        <View style="@style/vLineStyle" />

        <!-- Layout for labels -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:background="@color/colorBackground"
            android:elevation="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_dimen"
                android:textColor="@color/textDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="@dimen/small_dimen"
                android:layout_marginRight="@dimen/small_dimen"
                android:layout_marginTop="28dp"
                android:background="@color/colorLight"
                android:elevation="8dp"
                android:gravity="center_horizontal"
                android:text="@string/label_points"
                android:textColor="@color/textDark"
                android:textSize="@dimen/material_text_subhead" />

            <TextView
                style="@style/labelsTextViewStyle"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/games_label" />

            <TextView
                style="@style/labelsTextViewStyle"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/set_label" />

            <TextView
                style="@style/labelsTextViewStyle"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/ace_label" />

        </LinearLayout>

        <View style="@style/vLineStyle" />

        <!-- Layout for Team / Player B -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:background="@color/colorBackground"
            android:elevation="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/playerNameTextViewStyle"
                android:text="@string/label_B" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/largeInfoTextViewStyle"
                android:elevation="8dp" />

            <TextView
                android:id="@+id/team_b_games"
                style="@style/smallInfoTextViewStyle" />

            <TextView
                android:id="@+id/team_b_sets"
                style="@style/smallInfoTextViewStyle" />

            <TextView
                android:id="@+id/team_b_aces"
                style="@style/smallInfoTextViewStyle" />

            <Button
                android:id="@+id/button_3ptsB"
                style="@style/LargeButtonStyle"
                android:onClick="addPointsB"
                android:text="@string/label_btn3pts" />

            <Button
                android:id="@+id/button_AceB"
                style="@style/LargeButtonStyle"
                android:onClick="add1AceB"
                android:text="@string/label_btnACE" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tennis_balls" />

        <Button
            android:id="@+id/button_reset"
            style="@style/LargeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:onClick="reset"
            android:text="RESET"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/locale_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/small_dimen"
            android:textColor="@color/textDark" />

        <ImageView
            android:id="@+id/locale_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/it" />

    </RelativeLayout>
</RelativeLayout>
